src/Base/main/default/objects/ProductItemTransaction/fields/Inventory_Product__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Product__c</fullName>
    <formula>ProductItem.Product2.AcctSeed__Inventory_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Product</label>
    <type>Checkbox</type>
</CustomField>