src/Base/main/default/objects/ProductItemTransaction/fields/Is_Serialized__c.field-meta.xml
<CustomField>
    <fullName>Is_Serialized__c</fullName>
    <formula>ProductItem.Product2.AcctSeedERP__Serialized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Serialized</label>
    <type>Checkbox</type>
</CustomField>